Finished media queries to make website responsive. Also fixed up colors to ensure AAA contrast

--- a/style.css
+++ b/style.css
@@ -14,11 +14,7 @@ header{
     margin-bottom:10px;
     top:0px;
     display:inline-block;
-    font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  /* Font embed code fromhttps://fonts.google.com/selection/embed */
-    padding:0.25em;
+    padding:0;
     padding-left:0px;
     padding-right:0px;
     overflow:auto;
@@ -26,14 +22,14 @@ header{
   }
   h2{
     font-family: "Poppins", sans-serif;
-  font-weight: 500;
   font-style: normal;
   }
   h3{
     font-family: "Poppins", sans-serif;
-  font-weight: 500;
+    font-weight:500;
   font-style: normal;
   }
+  /* Font embed code from https://fonts.google.com/selection/embed */
   .CompanyName{
     display:flex;
     padding:3px;
@@ -50,7 +46,7 @@ header{
     margin-left:5px;
   }
   .searchform{
-    width:30%;
+    width:45%;
     height:70%;
     margin:10px;
   }
@@ -68,25 +64,31 @@ header{
   }
   .sitecontentwrapper{
     display:grid;
-    grid-template-columns: 20px auto auto auto auto; 
+    grid-template-columns:1% 50% 50%; 
     grid-template-rows:auto auto auto auto;
-    gap:30px;
-    /* overflow:auto; */
+    column-gap:1%;
+    row-gap:0.5%;
+    overflow:auto;
+    /* width:100%; */
   }
   .tableinfo{
     color:#4100FA;
     grid-row:1;
-    grid-column:2;
     text-align:left;
-    padding:10px;
-    line-height:2;
+    padding:5%;
+    padding-top:0;
+    line-height:3;
   }
   .brandtable{
-    font-size:larger;
     color:#4100FA;
     margin:0;
-    grid-column:2;
     grid-row:2;
+}
+.tablewrapper{
+  width:90%;
+  height:100%;
+  grid-column:2;
+  grid-row:1 / 3;
 }
 table,th,td{
     border:3px solid;
@@ -95,62 +97,73 @@ table,th,td{
     padding:10px;
     font-family:Arial, Helvetica, sans-serif;
     text-align:center;
-    background-color:#acacac;
+    background-color:#ebebeb;
+    font-size:larger;
+}
+table{
+  width:100%;
+  height:90%;
 }
 .tableimage{
-  width:400px;
-  height:250px;
+  width:90%;
+  height:90%;
 }
 .seeall{
-  background-color:#9200FA;
+  background-color:#7D00D6;
   color:#fafafa;
-  padding:20px;
+  padding:3%;
   display:block;
-  width:140px;
+  width:30%;
   text-align:center;
   border-radius:50%;
-  margin-top:20px;
+  margin-top:2%;
 }
 .missionstatement{
-  grid-column:3 / 4;
+  grid-column:3;
   grid-row:1;
-  width:600px;
+  width:90%;
+  height:100%;
+}
+.missionstatementwrapper{
   border-style:solid;
-  border-color:#535EFA;
+  border-color:#CBCBFB;
   border-width:2px;
   background-color: #3c3c3c;
-  padding:10px;
-  color:#535EFA;
+  padding:5%;
+  color:#CBCBFB;
+  display:block;
   padding-top:0px;
 }
 .learnmore{
-  background-color:#9200FA;
+  background-color:#7D00D6;
+  display:block;
   color:#fafafa;
-  padding:20px;
-  width:60px;
-  height:40px;
+  padding:3%;
+  width:20%;
+  /* height:5%; */
   text-align:center;
+  margin-top:1%;
   border-radius:50%;
-  grid-column:4;
+  grid-column:2;
   grid-row:1;
 }
 .kclocations{
-  grid-column:3 / 5;
+  grid-column:3;
   grid-row:2;
   color:#0113FA;
 }
 .map{
-  width:725px;
-  height:500px;
+  width:90%;
+  height:25%;
   border-style:solid;
   border-color:#555555;
   border-width:3px;
 }
 .seemap{
-  background-color:#9200FA;
+  background-color:#7D00D6;
   color:#fafafa;
-  padding:20px;
-  width:100px;
+  padding:3%;
+  width:40%;
   height:auto;
   text-align:center;
   border-radius:50%;
@@ -160,11 +173,11 @@ table,th,td{
 .locationlist{
   display:block;
   color:#0113FA;
-  margin-left:50px;
 }
 .office{
-  width:650px;
-  height:400px;
+  margin-top:0;
+  margin-left:5%;
+  width:70%;
   border-style:solid;
   border-color:#555555;
   border-width:2px;
@@ -172,28 +185,26 @@ table,th,td{
 .newssection{
   grid-row:3;
   grid-column:2;
-  color:#00AEFA;
-  background-color:#555555;
+  color:#00BBFF;
   text-align:center;
   border-style:solid;
-  border-color:#00AEFA;
+  border-color:00BBFF;
   border-width:3px;
-  padding:10px 20px 10px 20px;
+  margin-top:0.5%;
+  height:100%;
+  width:90%;
+  background-color:#2E2E2E;
 }
 .news{
-  width:550px;
-  height:500px;
-}
-.newsdescription{
-  display:block;
-  padding-top:5px;
+  width:100%;
+  height:80%;
 }
 .careerinfo{
-  padding:20px;
+  padding:1%;
   grid-row:3;
-  grid-column:3 / 5;
-  width:650px;
-  height:590px;
+  grid-column:3;
+  width:80%;
+  height:97%;
   background-image: url(Images/ScientistWorking.png);
   border-style:solid;
   border-color:#4100FA;
@@ -201,32 +212,36 @@ table,th,td{
   color:#4100FA;
 }
 .viewall{
-  display:block;
-  background-color:#9200FA;
+  background-color:#7D00D6;
   color:#fafafa;
-  padding:20px;
-  width:100px;
-  height:auto;
+  padding:3%;
+  width:20%;
+  margin-top:1%;
   text-align:center;
   border-radius:50%;
-  grid-row:4;
+  display:block;
   grid-column:2;
 }
 .explore{
-  display:block;
-  background-color:#9200FA;
+  background-color:#7D00D6;
   color:#fafafa;
-  padding:20px;
-  width:200px;
-  height:auto;
+  padding:3%;
+  width:20%;
   text-align:center;
   border-radius:50%;
+  grid-column:3;
+  display:block;
   grid-row:4;
-  grid-column:3 / 5;
+}
+a.actionbuttons{
+  color:#fafafa;
+}
+a.actionbuttons:link{
+  text-decoration:none;
 }
 footer{
   display:grid;
-  grid-template-columns:300px auto auto auto;
+  grid-template-columns:1fr 20% 1fr 20% 1fr 20% 1fr;
   color:#0113FA;
   gap:10px;
 }
@@ -236,11 +251,11 @@ footer{
 }
 .secondfooter{
   width:auto;
-  grid-column:3;
+  grid-column:4;
 }
 .thirdfooter{
   width:auto;
-  grid-column:4;
+  grid-column:6;
 }
 .footerlines{
   display:block;
@@ -249,11 +264,108 @@ footer{
   width:50px;
   height:50px;
   margin:10px;
-  margin-left:8px;
 }
-@media screen and (max-width: 1189px) {
+@media (max-width: 800px) {
   .sitecontentwrapper{
     display:grid;
-
+    grid-template-columns:50px 1fr 10px;
+    grid-template-rows:auto auto auto auto auto auto auto auto auto auto;
+    row-gap:1%;
+  }
+  .office{
+    width:80%;
+  }
+  .tableinfo{
+    grid-column:2;
+    grid-row:1;
+  }
+  .brandtable{
+    grid-column:2;
+    grid-row:2;
+  }
+  .missionstatement{
+    grid-column:2;
+    grid-row:4;
+  }
+  .kclocations{
+    grid-column:2;
+    grid-row:5;
+  }
+  .office{
+    grid-column:2;
+    grid-row:6;
+  }
+  .newssection{
+    grid-column:2;
+    grid-row:7;
+  }
+  .viewall{
+    grid-column:2;
+    grid-row:8;
+  }
+  .careerinfo{
+    grid-column:2;
+    grid-row:9;
+  }
+  .explore{
+    grid-column:2;
+    grid-row:10;
+  }
+}
+@media (max-width: 650px) {
+  .searchform{
+    display:none;
+  }
+  .kimberlyclarklogo{
+    width:100%;
+    height:100%;
+  }
+  header{
+    text-align:center;
+    height:10rem;
+    overflow-y:auto;
+  }
+  .HeaderLinks{
+    display:grid;
+    grid-template-rows:auto auto auto auto auto;
+  }
+  .headeritem1{
+    grid-row:1;
+  }
+  .headeritem2{
+    grid-row:2;
+  }
+  .headeritem3{
+    grid-row:3;
+  }
+  .headeritem4{
+    grid-row:4;
+  }
+  .headeritem5{
+    grid-row:5;
+  }
+}
+@media (max-width: 1030px){
+  .news{
+    width:100%;
+    height:70%;
+  }
+}
+@media (max-width: 800px){
+  .news{
+    width:100%;
+    height:80%;
+  }
+}
+@media (max-width: 560px){
+  .news{
+    width:100%;
+    height:75%;
+  }
+}
+@media (max-width: 474px){
+  .news{
+    width:100%;
+    height:65%;
   }
 }
